--- a/modules/development/emacs/config.org
+++ b/modules/development/emacs/config.org
@@ -46,13 +46,11 @@ I'm really liking the modus themes by Prot at the moment. Good using =f5= to rot
 
 #+begin_src elisp
 (use-package modus-themes
-  :ensure t
   :init
   (modus-themes-include-derivatives-mode 1)
   :bind
   (("<f5>" . modus-themes-rotate)
-   ("C-<f5>" . modus-themes-select)
-   ("M-<f5>" . modus-themes-load-random))
+   ("C-<f5>" . modus-themes-select))
   :config
   ;; Your customizations here:
   (setq modus-themes-to-toggle '(modus-operandi-tinted modus-vivendi-tinted)
@@ -510,7 +508,7 @@ expand things like =<s= to src blocks
 #+begin_src elisp
 (use-package elfeed
   :defer t
-  :config (elfeed-set-max-connections 32))
+  :config (elfeed-set-max-connections 64))
 
 (use-package elfeed-org
   :defer t
@@ -734,7 +732,6 @@ This is to prevent possible `tramp' calls."
   (consult-gh-repo-action #'consult-gh--repo-browse-files-action)
   (consult-gh-large-file-warning-threshold 2500000)
   (consult-gh-confirm-name-before-fork nil)
-  (consult-gh-confirm-before-clone t)
   (consult-gh-notifications-show-unread-only nil)
   (consult-gh-default-interactive-command #'consult-gh-transient)
   (consult-gh-prioritize-local-folder nil)
@@ -801,7 +798,7 @@ This is to prevent possible `tramp' calls."
   :config
   ;; Enable auto completion, configure delay, trigger and quitting
 (setq corfu-auto t
-      corfu-auto-delay 0.2
+      corfu-auto-delay 0.25
       corfu-quit-no-match 'separator) ;; or t
   :init
 
